Fixed z-index in several components

--- a/src/components/game/Game.scss
+++ b/src/components/game/Game.scss
@@ -40,11 +40,11 @@
 @media screen and (min-width: 600px) {
 
   .game {
-    margin-top: -13vw;
+    margin-top: -11vw;
   }
 
   .game-status {
-    min-height: 100px;
+    min-height: 80px;
     display: flex;
     align-items: center;
 
