--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -14,6 +14,7 @@ header {
     -webkit-transition: transform .5s ease;
 	-moz-transition: transform .5s ease;
     transition: transform .5s ease;
+    z-index: 100;
 
     &:hover,
     &:focus {
@@ -59,20 +60,20 @@ header {
         -webkit-box-shadow: rgba(0, 0, 0, 0.8) 0 9px 20px -14px;
         -moz-box-shadow: rgba(0, 0, 0, 0.8) 0 9px 20px -14px;
         box-shadow: rgba(0, 0, 0, 0.8) 0 9px 20px -14px;
-        z-index: -1;
+        z-index: 10;
     }
     
 }
 
 @media screen and (min-width: 600px) {
     header {
-        transform: translateY(-17vw);
+        transform: translateY(-14.5vw);
     }
     header h1 {
-        font-size: 8vw;
+        font-size: 7vw;
 
         & span {
-            font-size: 6vw;
+            font-size: 5vw;
         }
     }
     
